# rust-schema-registry-client

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: avro_consumer.rs  avro_consumer_encryption.rs  avro_consumer_with_headers.rs  avro_producer.rs  avro_producer_encryption.rs  avro_producer_with_headers.rs  avro_ser_consumer.rs  avro_ser_producer.rs  example_utils.rs  json_consumer.rs  json_consumer_encryption.rs  json_producer.rs  json_producer_encryption.rs  protobuf_consumer.rs  protobuf_consumer_encryption.rs  protobuf_producer.rs  protobuf_producer_encryption.rs
proto/confluent/: meta.proto
proto/confluent/type/: decimal.proto
proto/test/: dep.proto  example.proto  test.proto
src/: lib.rs
src/codegen/: confluent.r#type.rs  confluent.rs
src/codegen/test/: confluent.rs  test.rs
src/rest/: client_config.rs  dek_registry_client.rs  mock_dek_registry_client.rs  mock_schema_registry_client.rs  mod.rs  rest_service.rs  schema_registry.rs  schema_registry_client.rs
src/rest/apis/: error_message.rs  mod.rs
src/rest/models/: association.rs  create_dek_request.rs  create_kek_request.rs  dek.rs  kek.rs  metadata.rs  mod.rs  registered_schema.rs  rule.rs  rule_set.rs  schema.rs  schema_reference.rs  server_config.rs
src/rules/: mod.rs
src/rules/cel/: cel_executor.rs  cel_field_executor.rs  cel_lib.rs  mod.rs
src/rules/encryption/: encrypt_executor.rs  kms_driver.rs  mod.rs
src/rules/encryption/awskms/: aws_aead.rs  aws_client.rs  aws_driver.rs  mod.rs
src/rules/encryption/azurekms/: azure_aead.rs  azure_client.rs  azure_driver.rs  mod.rs
src/rules/encryption/gcpkms/: gcp_aead.rs  gcp_client.rs  gcp_driver.rs  mod.rs
src/rules/encryption/hcvault/: hcvault_aead.rs  hcvault_client.rs  hcvault_driver.rs  mod.rs
src/rules/encryption/localkms/: local_client.rs  local_driver.rs  mod.rs
src/rules/jsonata/: jsonata_executor.rs  mod.rs
src/serdes/: avro.rs  config.rs  json.rs  mod.rs  protobuf.rs  rule_registry.rs  serde.rs  wildcard_matcher.rs
