[package]
name = "schema-registry-client"
version = "0.1.0"
authors = ["Robert Yokota <rayokota@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
description = "Serialize/deserialize data to/from Kafka using the Confluent Schema Registry"
homepage = "https://github.com/rayokota/rust-schema-registry-client"
repository = "https://github.com/rayokota/rust-schema-registry-client"
readme = "README.md"
keywords = ["kafka", "schema", "avro", "protobuf", "jsonschema"]
categories = ["encoding", "parsing"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
